--- a/wdw/src/Components/CreateUser.css
+++ b/wdw/src/Components/CreateUser.css
@@ -22,7 +22,7 @@
 }
 
 .info{
-    width: 50%;
+    width: 65%;
     float: none;
     display: block;
     margin-left: auto;
@@ -71,7 +71,6 @@
     margin-right: auto;
     padding-bottom: 20px;
 }
-
 .or{
     width: fit-content;
     float: none;
@@ -79,4 +78,23 @@
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
+}
+
+.name{
+    display: flex;
+  justify-content: center;
+}
+
+.fname{
+    width: 30%;
+    float: left;
+    margin-bottom: 10px;
+    margin-right: 5px;
+}
+
+.lname{
+    width: 30%;
+    float: left;
+    margin-bottom: 10px;
+    margin-left: 5px;
 }
