--- a/wdw/src/Components/Login.css
+++ b/wdw/src/Components/Login.css
@@ -80,3 +80,11 @@
     margin-right: auto;
     padding-bottom: 20px;
 }
+
+.dialogbuttons{
+    width: fit-content;
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
