--- a/wdw/src/Components/Navbar.css
+++ b/wdw/src/Components/Navbar.css
@@ -12,11 +12,14 @@
   padding: 0 5px;
 }
 
-.wdw{
-  height: 100px;
-  width: 350px;
+.container{
+  max-height: 100px;
+  max-width: 500px;
   float: right;
-  margin-top: 13px;
+}
+.wdw{
+  width: 100%;
+  height: auto;
 }
 
 .card{
